--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/6fd7bfaf7e.js"></script>
+    <script src="components/js/tracker.js"></script>
+    <script src="components/main.js"></script>
     <meta name="viewport" content="initial-scale=1, user-scalable=no">
 </head>
 <body>
@@ -26,7 +28,7 @@
             <span class="input-group-addon">
                 <span><i class="fas fa-utensils"></i></span>
             </span>
-            <input type="text" class="form-control form-rounded" name="restaurantName" id="restaurantName" placeholder="Restaurant Name">
+            <input type="text" class="form-control form-rounded" name="restaurant-name" id="restaurant-name" placeholder="Restaurant Name">
         </div>
         <div class="form-group input-group col-xs-12 col-lg-12">
             <span class="input-group-addon">
@@ -38,7 +40,7 @@
             <span class="input-group-addon">
                 <span><i class="fas fa-glass-cheers"></i></span>
             </span>
-            <input type="text" class="form-control form-rounded" name="inOrOut" id="inOrOut" placeholder="Fast Food/ Dine In">
+            <input type="text" class="form-control form-rounded" name="in-or-out" id="in-or-out" placeholder="Fast Food/ Dine In">
         </div>
         <div class="form-group input-group col-xs-12 col-lg-12">
             <span class="input-group-addon">
@@ -50,10 +52,10 @@
             <span class="input-group-addon">
                 <span><i class="fas fa-users"></i></span>
             </span>
-            <input type="text" class="form-control form-rounded" name="partyOf" id="partyOf" placeholder="Good for part of">
+            <input type="text" class="form-control form-rounded" name="party-of" id="party-of" placeholder="Good for part of">
         </div>
-        <button type="button" class="add btn btn-success" id="addButton">Add</button>
-        <button type="button" class="cancel btn btn-default" id="cancelButton">Cancel</button>
+        <button type="button" class="add btn btn-success" id="add-button">Add</button>
+        <button type="button" class="cancel btn btn-default" id="cancel-button">Cancel</button>
         <button type="button" class="data btn btn-success" id="dataButton">Get data from server</button>
     </div>
     <div class="student-list-container page-header media-heading col-xs-12 col-md-9 col-lg-9">
@@ -68,7 +70,7 @@
                 <th class="col-xs-2 col-md-2">Operations</th>
             </tr>
             </thead>
-            <tbody id="displayArea">
+            <tbody id="display-area">
 
             </tbody>
         </table>
